--- a/index.html
+++ b/index.html
@@ -167,6 +167,21 @@
                 </div>
 
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-info-circle fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/marsrutai/m61.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>3. Krokų lanka – Tulragis – Minijos senvagė</h4>
+                        <p class="text-muted">3 - 4 valandos</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -176,7 +191,7 @@
                         <img src="img/marsrutai/m31.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>3. Uostadvaris – Vilhelmo kanalas – Dreverna</h4>
+                        <h4>4. Uostadvaris – Vilhelmo kanalas – Dreverna</h4>
                         <p class="text-muted">10 valandų</p>
                     </div>
                 </div>
@@ -191,7 +206,7 @@
                         <img src="img/marsrutai/m41.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>4. Skirvytė – Vytinis – Pakalnė</h4>
+                        <h4>5. Skirvytė – Vytinis – Pakalnė</h4>
                         <p class="text-muted">10 valandų</p>
                     </div>
                 </div>
@@ -206,7 +221,7 @@
                         <img src="img/marsrutai/m51.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>5. Uostadvaris – Nida</h4>
+                        <h4>6. Uostadvaris – Nida</h4>
                         <p class="text-muted">10 valandų</p>
                     </div>
                 </div>
@@ -281,7 +296,7 @@
                                     <h4 class="subheading">Pradedame keliones naująja Greta</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">2015 m. atplaukėme į Nemuno deltą ir įsikūrėme Uostadvario uoste. Mūsų laivas turi nemažą kajutę, miegamasias vietas, todėl beveik visą vasarą mes jame ir gyvename. Ir žinoma plaukiojame. Laivas plaukia maždaug 10 - 12 km/h greičiu, yra palyginti tylus ir beveik visai nekelia bangų, tad keliauti juo mums labai malonu. Jau išnaršėme visus vietinius upelius skersai ir išilgai, o dabar norime parodyti Nemuno deltos grožį ir kitiems, tad prisijunkite prie mūsų!</p>
+                                    <p class="text-muted">2015 m. atplaukėme į Nemuno deltą ir įsikūrėme Uostadvario uoste. Mūsų laivas turi nemažą kajutę, miegamasias vietas, todėl beveik visą vasarą mes jame ir gyvename. Ir, žinoma, plaukiojame. Laivas plaukia maždaug 10 - 12 km/h greičiu, yra palyginti tylus ir beveik visai nekelia bangų, tad keliauti juo mums labai malonu. Jau išnaršėme visus vietinius upelius skersai ir išilgai, o dabar norime parodyti Nemuno deltos grožį ir kitiems, tad prisijunkite prie mūsų!</p>
                                     <p class="text-muted"></p>
                                 </div>
                             </div>
@@ -317,8 +332,15 @@
                         <h4>Rimas Višinskas</h4>
 			<br/>
                         <p class="text-muted">Kapitonas</p>
-			<p class="text-muted"><span class="fa fa-mobile"></span>&nbsp;&nbsp;+370 673 05500</p>
-			<p class="text-muted"><span class="fa fa-envelope"></span>&nbsp;&nbsp;visinskas.rimas@gmail.com</p>
+			            <p class="text-muted"><span class="fa fa-mobile"></span>&nbsp;&nbsp;+370 673 05500</p>
+			            <p class="text-muted"><span class="fa fa-envelope"></span>&nbsp;&nbsp;visinskas.rimas@gmail.com</p>
+                        <br/><br/>
+                        <p class="text-muted">
+                            <a href="https://www.facebook.com/Laivas-Greta-438779216521745/" target="_blank" class="facebook-link">
+                                <span class="fa fa-facebook-official"></span>&nbsp;
+                                Sekite mus Facebook
+                            </a>
+                        </p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -336,11 +358,11 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="https://twitter.com/intent/tweet?url=laivasgreta.lt" target="_blank"><i class="fa fa-twitter"></i></a>
-                        </li>
                         <li><a href="https://www.facebook.com/sharer/sharer.php?u=laivasgreta.lt" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li><a href="https://plus.google.com/share?url=laivasgreta.lt" target="_blank"><i class="fa fa-google-plus"></i></a>
+                        </li>
+                        <li><a href="https://twitter.com/intent/tweet?url=laivasgreta.lt" target="_blank"><i class="fa fa-twitter"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -508,6 +530,40 @@ Kelionė tikrai neprailgs!</p>
                                 <p>Artėjame prie Nidos. Įplaukę į uostą, švartuojamės prie krantinės ir prisistatome uosto kapitonui. Išlipę iš laivo, žvalgomės aplinkui. Žavi nedidelės tvarkingos trobelės. Tai lyg maži viešbutėliai, atspindintys šiam kraštui būdingą architektūrą ir koloritą. Jie pilni poilsiautojų. Gražūs Nidos miškai. Žavi aukšti, išlakūs medžiai, spygliuočiai ir lapuočiai, pasklidę po visą teritoriją, Parnidžio kopa, švietusi mums iš tolo, ir saulės laikas, švytintis granito plokštėse.</p>
                                 <p>Čia viskas kitaip… Tu jauti, kaip išsilydo laikas ir erdvė prisipildo palaimingo svaigulio, o žmonės, susitinkantys ir išsiskirstantys, vaikšto bet kur, šneka bet ką… Čia viskas gražu, bet gražiau už viską yra jūra. Klampoji po smėlį tol, kol pavargsti ir nukrenti. Jis toks švelnus, baltas ir toks lakus… Jis gali užpustyti tave su visais tavo rūpesčiais… Kaip didžiulis mitologinis žvėris švokšdama širdin alsuoja jūra, ir tu supranti, kad nieko geresnio, nieko mielesnio šioje žemėje nėra. Ir norisi būti taip visą likusį gyvenimą, pilnam ramybės ir tiesos.</p>
 				</div>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Uždaryti</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 6 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>Krokų lanka – Tulragis – Minijos senvagė</h2>
+                                <p class="item-intro text-muted">3 - 4 valandos</p>
+                                <!--
+                                <img class="img-responsive img-centered" src="img/marsrutai/map3.jpg" alt="">
+                                -->
+                                <div class="portfolio-text">
+                                <p>Gamta nesiliauja stebinti. Atrodo, išnaršėme viską ir štai tau – dar viena staigmena!</p>
+                                <p>Iš Uostadvario Atmatos upe plaukiame į Krokų lanką. Tai lagūninis ežeras, apie kurį jau rašėme. Reikia paminėti, kad į šį ežerą suteka garsioji aukštapelkė Aukštumala. Šis gamtos stebuklas mums nepasiekiamas, bet mes galime įplaukti į polderinį kanalą, vadinamą Tulragiu. Aplenkę “Svogūnų” salą, įplaukiame į kanalą. Laivas plaukia labai tyliai, bet... briedis mus jau pastebėjo. Nuostabus, didingas žvėris. Žiūrime į jį išsižioję. Briedžiui tai nė motais. Spinduliuodamas laukine didybe žvėris toliau sau jaukiai ganosi. Esame jam visai neįdomūs. – Tai šokiruoja. Plaukiame toliau. Stebime lydekas ir ešerius, medžiojančius smulkias žuveles – jiems pietų metas. Žuvims mes taip pat neįdomūs ir tai suprantama - žvejoti čia griežtai draudžiama. Aukštai suka ratus plėšrūs paukščiai: ereliai, vanagai ir  kiti, mums nepažįstami plėšrūnai – apie tai sprendžiame pagal jų skrydį. Pamažu artėjame prie vandens perkėlimo įrenginio.Tokioje laukinėje gamtoje pasitaikantys civilizacijos “produktai” atrodo keistai. Dar labiau nustebina piešinys ant įrenginio sienos - gražus “svetimkūnis”. Ant viršaus įrengta stebėjimo aikštelė. Švartuojamės, lipame iš laivo ir einame prie įrenginio. Užlipę į viršų regime tai, ko negalime pasiekti – tolumoje esančią Aukštumalos pelkę. Esame girdėję apie kitą vandens kelią, vedantį į pelkę. Bet tai būtų jau kitas maršrutas. Pasižvalgę grįžtame į laivą ir plaukiame atgal į Krokų lanką, iš jos į Atmatą, iš Atmatos sukame į Miniją ir pasiekiame šios upės senvagę. Regime gausybę baltų vandens lelijų ir kitų augalų, aukštai suka ratus trys jūros ereliai. Pasigrožėję grižtame atgal, sukame į Upaitę ir plaukiame iki Kniaupo įlankos. Aplankome usūrinius šuniukus. Mums pašaukus jie vienas po kito prieina labai arti ir laukia dovanų. Šuniukai labai mieli. Kažkas juos prijaukino. Ar tai gerai? - Kažin. Ar jie, visų maitinami, sugebės gyventi tada, kai bus šalta ir niekas jų nebelankys?</p>
+                                <p>Pasidžiaugę šuniukais plaukiame Kuršių mariomis žvejų pažymėtu keliu iki Atmatos forvaterio ir grįžtame į uostą.</p>
+				                </div>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Uždaryti</button>
                             </div>
                         </div>
